Support Spark 4 OOS